crates/sui-prover/tests/snapshots/quantifiers/find_find_index.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
assertion_line: 268
expression: output
---
exiting with verification errors
error: prover::ensures does not hold
   ┌─ tests/inputs/quantifiers/find_find_index.fail.move:29:5
   │
29 │     ensures(option::is_some(result4)); // should fail because here we expect none
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/inputs/quantifiers/find_find_index.fail.move:27: test_find

error: prover::ensures does not hold
   ┌─ tests/inputs/quantifiers/find_find_index.fail.move:38:5
   │
38 │     ensures(*option::borrow(&idx1) == 1); // should fail because here we expect index 0
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/inputs/quantifiers/find_find_index.fail.move:34: test_find_index



== Generated Boogie Code ==
function {:inline} $42_quantifiers_find_find_index_fail_x_is_10$pure(_$t0: int) returns ($ret0: bool)
{
    (var $t1 := 10;
    (var $t2 := (_$t0 == $t1);
    $t2))
}
function {:inline} $42_quantifiers_find_find_index_fail_x_is_20$pure(_$t0: int) returns ($ret0: bool)
{
    (var $t1 := 20;
    (var $t2 := (_$t0 == $t1);
    $t2))
}
function {:inline} $42_quantifiers_find_find_index_fail_x_is_greater_than_100$pure(_$t0: int) returns ($ret0: bool)
{
    (var $t1 := 100;
    (var $t2 := (_$t0 > $t1);
    $t2))
}
